syntax = "proto3";

package nt.longmsg;
import "nt_msg_common.proto";

message SsoSendLongMsgReq {
    LongMsgBody body = 2;
}

message LongMsgBody {
    string fileName = 1;
    LongMsgData data = 2;
}
message LongMsgData {
    repeated trpc.msg.common.Msg msgs = 1;
}

message LongMsgSettings {
  uint32 field1 = 1; // 4
  uint32 field2 = 2; // 1
  uint32 field3 = 3; // 7
  uint32 field4 = 4; // 0
}

message SendLongMsgReq {
  SendLongMsgInfo info = 2;
  LongMsgSettings settings = 15;
}

message SendLongMsgInfo {
  uint32 type = 1; // Group: 3, Friend: 1
  optional PeerInfo peer = 2;
  optional uint32 groupCode = 3;
  optional bytes payload = 4;
}
message PeerInfo {
  optional string uid = 2;
}

message SendLongMsgResp {
  SendLongMsgResult result = 2;
  LongMsgSettings settings = 15;
}

message SendLongMsgResult {
  string resId = 3;
}