syntax = "proto3";

package nt.multimsg;

/////////////////////////////////////////////////

// https://github.com/tsuzcx/qq_apk/blob/afe46ef5640d0ba6850cdefd3c11badbd725a3f6/com.tencent.mobileqq/classes.jar/tencent/im/longconn/multimsg/MultiMsg%24ReqBody.java#L11
message MultiMsgReqBody {
    // 设置1
    uint32 uint32_subcmd = 1;
    // 设置5
    uint32 uint32_term_type = 2;
    // 设置9
    uint32 uint32_platform_type = 3;
    uint32 uint32_net_type = 4;
    bytes bytes_build_ver = 5;
    repeated MultiMsgApplyUpReq rpt_multimsg_applyup_req = 6;
    repeated MultiMsgApplyDownReq rpt_multimsg_applydown_req = 7;
    uint32 uint32_bu_type = 8;
    uint32 uint32_req_channel_type = 9;
}

// https://github.com/tsuzcx/qq_apk/blob/afe46ef5640d0ba6850cdefd3c11badbd725a3f6/com.tencent.mobileqq/classes.jar/com/tencent/mobileqq/transfile/protohandler/MultiMsgUpHandler.java#L38
message MultiMsgApplyUpReq {
    uint64 uint64_dst_uin = 1;
    uint64 uint64_msg_size = 2;
    bytes bytes_msg_md5 = 3;
    
    uint32 uint32_msg_type = 4;
    /**
     * 设置0
     */
    uint32 uint32_apply_id = 5;
}

message MultiMsgApplyDownReq {
    bytes bytes_msg_resid = 1;
    uint32 uint32_msg_type = 2;
    uint64 uint64_src_uin = 3;
    uint32 uint32_apply_id = 4;
    bytes bytes_msg_key = 5;
    bytes bytes_msg_sig = 6;
    repeated Ipv4Info rpt_ip_v4_info = 7;
    repeated Ipv6Info rpt_ip_v6_info = 8;
}

message Ipv4Info {
    uint32 uint32_ip_v4_addr = 1;
    uint32 uint32_ip_v4_port = 2;
    uint32 uint32_is_https_addr = 3;
}

message Ipv6Info {
    bytes bytes_ip_v6_addr = 1;
    uint32 uint32_ip_v6_port = 2;
    uint32 uint32_is_https_addr = 3;
}
/////////////////////////////////////////////
message MultiMsgRsqBody {
    uint32 uint32_subcmd = 1;
    repeated MultiMsgApplyUpRsq rpt_multimsg_applyup_rsp = 2;
    repeated MultiMsgApplyDownRsq rpt_multimsg_applydown_rsp = 3;
}

/**
 * 使用位置：https://github.com/tsuzcx/qq_apk/blob/afe46ef5640d0ba6850cdefd3c11badbd725a3f6/com.tencent.mobileqq/classes.jar/com/tencent/mobileqq/transfile/MultiMsgUpProcessor.java#L416
 */
message MultiMsgApplyUpRsq {
    /**
     * 0 - 成功
     * 
     * shouldRetryByRetCodeForGroup https://github.com/tsuzcx/qq_apk/blob/afe46ef5640d0ba6850cdefd3c11badbd725a3f6/com.tencent.mobileqq/classes.jar/com/tencent/mobileqq/transfile/protohandler/BaseHandler.java#L173
     */
    uint32 uint32_result = 1;
    // 使用
    bytes bytes_msg_resid = 2;
    // 使用
    bytes bytes_msg_ukey = 3;
    // 使用
    repeated uint32 rpt_uint32_up_ip = 4;
    // 使用
    repeated uint32 rpt_uint32_up_port = 5;
    // 使用
    uint64 uint64_block_size = 6;
    // 使用
    uint64 uint64_up_offset = 7;
    uint32 uint32_apply_id = 8;
    // 使用
    bytes bytes_msg_key = 9;
    // 使用
    bytes bytes_msg_sig = 10;
    bytes msg_extern_info = 11;
    repeated bytes rpt_bytes_up_ip_v6 = 12;
    repeated uint32 rpt_uint32_up_v6_port = 13;
}
message MultiMsgApplyDownRsq {
    uint32 uint32_result = 1;
    bytes bytes_thumb_down_para = 2;
    bytes bytes_msg_key = 3;
    repeated uint32 rpt_uint32_down_ip = 4;
    repeated uint32 rpt_uint32_down_port = 5;
    bytes bytes_msg_resid = 6;
    MultiMsgExternMsg msg_extern_info = 7;
    repeated bytes rpt_bytes_down_ip_v6 = 8;
    repeated uint32 rpt_uint32_down_v6_port = 9;
    uint32 uint32_apply_id = 10;
}

message MultiMsgExternMsg {
    uint32 uint32_channel_type = 1;
}